# perplexity-cli

./: .gitignore  README.md  install.sh  pyproject.toml
resources/: prompts.yml
src/agent/: __init__.py  llm.py  main.py  prompt.py  search_agent.py
src/cli/: README.md  __init__.py  chat.py  client.py  main.py
src/clients/: __init__.py  serp_api.py
src/models/: __init__.py  conversation.py  message.py
src/schemas/: __init__.py  conversation.py  message.py
src/storage/: __init__.py  conversation.py  database.py
src/tools/: __init__.py  executor.py  search_tool.py
